Fix COR issue